# jaguar-sdk

./: .env  .env.example  .env.production  .gitignore  .replit  COMPLETE-SETUP-SUMMARY.md  DEPLOYMENT-COMPLETE.md  DOCKER-BUILD-FIX-SUMMARY.md  DOCKER-BUILD-SOLUTION.md  DOCKER-DEPLOYMENT-READY.md  DOCKER-SETUP-TESTING.md  DOCKER-TESTING-GUIDE.md  FINAL-INTEGRATION-SUMMARY.md  GITHUB-ACTIONS-SETUP.md  LICENSE  LOCAL-SETUP-GUIDE.md  MASTER-AGENT-TEST-RESULTS.md  MONOREPO-STRUCTURE.md  README.md  SETUP-COMPLETE.md  SETUP.md  UI_UX_Testing_Report.md  api-testing-summary.md  cookies.txt  docker-compose-dokploy.yml  docker-compose-production.yml  docker-compose.yml  drizzle.config.ts  middleware.ts  next.config.js  next.config.ts  openwebui-debug-guide.md  package-lock.json  package.json  playwright.config.custom.ts  pyproject.toml  replit.md  tailwind.config.ts  test-github-integration.py  test-local-integration.py  (+4 more)
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
attached_assets/: Pasted-2025-09-28T01-41-58Z-info-Deployment-02ed8fa4-5c10-48ca-8ed1-6a8793a73399-2025-09-28T01-41-58Z-inf-1759024711380_1759024711381.txt  content-1758997388793.md  content-1758999552869.md  content-1758999643592.md  content-1759012280077.md  content-1759026060518.md
backend/: .env.example  docker-compose-dokploy.yml  docker-compose.yml  serve_interface.py  server.py  test_interface.html
components/: auth-form.tsx  in-chat-auth-form.tsx  jaguar-sidebar.tsx  loading-message.tsx  multimodal-input.tsx  sign-out-form.tsx
docs/: openwebui-integration.md  sdk-developer-guide.md  (+1 more)
(+60 files in other folders)
