[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.1.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "supabase>=1.0.3",
    "uvicorn>=0.23.2",
]
